[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprite_scenes/common_scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/levels/gui_testing/Boss_tree.gd" type="Script" id=2]
[ext_resource path="res://assets/levels/gui_testing/assets/tilesets/gui_testing_tileset.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/levels/gui_testing/assets/sprites/GREEN_05.png" type="Texture" id=4]
[ext_resource path="res://assets/levels/gui_testing/assets/sprites/WT_01.png" type="Texture" id=5]
[ext_resource path="res://assets/levels/gui_testing/assets/sprites/1719877.jpg" type="Texture" id=6]
[ext_resource path="res://assets/gui/hud/game_UI.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.2202
height = 58.1039

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.9449, 44.2247 )

[node name="gui_testing" type="Node2D"]

[node name="gui_testing_tiles" parent="." instance=ExtResource( 3 )]

[node name="player" parent="." instance=ExtResource( 1 )]

[node name="game_UI" parent="player" instance=ExtResource( 7 )]

[node name="Boss_tree" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="GREEN_05" type="Sprite" parent="Boss_tree"]
position = Vector2( 519.37, 193.705 )
texture = ExtResource( 4 )

[node name="WT_01" type="Sprite" parent="Boss_tree"]
visible = false
position = Vector2( 515.03, 208.234 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss_tree"]
position = Vector2( 514.268, 211.595 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 709.555, 218.225 )
shape = SubResource( 2 )

[node name="grassnstuff" type="Node2D" parent="."]
z_index = -3

[node name="1719877" type="Sprite" parent="grassnstuff"]
show_behind_parent = true
position = Vector2( 674.451, 92.0047 )
scale = Vector2( 0.431457, 0.431457 )
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="grassnstuff/1719877"]
margin_left = -2494.84
margin_top = 471.465
margin_right = -2454.84
margin_bottom = 511.465
rect_scale = Vector2( 123.681, 50.4788 )
color = Color( 0.498039, 0.67451, 0.443137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1719879" type="Sprite" parent="grassnstuff"]
show_behind_parent = true
position = Vector2( 2331.89, 92.0047 )
scale = Vector2( 0.431457, 0.431457 )
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="grassnstuff/1719879"]
margin_left = -2494.84
margin_top = 471.465
margin_right = -2454.84
margin_bottom = 511.465
rect_scale = Vector2( 123.681, 50.4788 )
color = Color( 0.498039, 0.67451, 0.443137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1719878" type="Sprite" parent="grassnstuff"]
show_behind_parent = true
position = Vector2( -982.121, 92.0646 )
scale = Vector2( 0.431457, 0.431457 )
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="grassnstuff/1719878"]
margin_left = -2494.84
margin_top = 471.465
margin_right = -2454.84
margin_bottom = 511.465
rect_scale = Vector2( 123.681, 50.4788 )
color = Color( 0.498039, 0.67451, 0.443137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
